--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ build/
 /src/main/resources/application-dev.properties
 /src/main/resources/application-test.properties
 /src/main/resources/application.properties
+
+.DS_Store
